--- a/stylesheet.css
+++ b/stylesheet.css
@@ -202,7 +202,7 @@ footer > p{
     .hero{
         margin-top: 60px;
         margin-bottom: 0;
-        height: 70vh;
+        height: 78vh;
     }
     .hero-title{
         font-size: 30px;
@@ -224,6 +224,9 @@ footer > p{
     }
     .profile{
         padding: 30px 10px;
+    }
+    .profile > img{
+        width: calc(80% / 2);
     }
     .pro-text{
         font-size: 10px;
